data/derived/comb/progs/unify/prog7286.ml.out
Characters 146-159:
  [mulByDigit i [h2+(h mod 10)]@t2];;
                 ^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
